# Regex

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  readme.md
Error/: error.cpp  error.hpp
Grammar/: CMakeLists.txt  OriginalGrammar.txt  Regex Grammar.txt  grammar.cpp  grammar.hpp
Regex/: BacktrackFreeGrammar.txt  CMakeLists.txt  SyntaxSpecifications.md  printFA.cpp  regexpr.cpp  regexpr.hpp
Source/: CMakeLists.txt
Source/Error/: error.cpp  error.hpp
Source/Grammar/: CMakeLists.txt  OriginalGrammar.txt  grammar.cpp  grammar.hpp
Source/Regex/: BacktrackFreeGrammar.txt  CMakeLists.txt  SyntaxSpecifications.md  printFA.cpp  printFA.hpp  regexpr.cpp  regexpr.hpp  regexpr_config.hpp  regexpr_config.hpp.in  regexpr_main.cpp
Test/: CMakeLists.txt
Test/Regex/: CMakeLists.txt  InvalidRegexes.txt  RegexInvalid.txt  RegexMatch_001.txt  RegexMatch_002.txt  RegexMatch_003.txt  RegexMatch_004.txt  RegexMatch_005.txt  RegexMatch_006.txt  RegexSearch_001.txt  RegexSearch_002.txt  RegexValid.txt  ValidRegexes.txt  regexpr-test.cpp  regexpr_test.cpp  regexpr_test.hpp  regexpr_test_main.cpp
